# kayan_systemair

./: .gitignore  LICENSE  MANIFEST.in  README.md  SystemAir_ERPNext_PRD.md  fix_structure.py  pyproject.toml
kayan_systemair/: api.py  hooks.py  install.py  modules.txt  patches.txt  startup.py  tasks.py  uninstall.py
kayan_systemair/config/: desktop.py  docs.py
kayan_systemair/custom/: quotation.py
kayan_systemair/doctype/systemair_accessory_item/: systemair_accessory_item.py
kayan_systemair/doctype/systemair_fan_item/: systemair_fan_item.js  systemair_fan_item.py  test_systemair_fan_item.py
kayan_systemair/doctype/systemair_import_log/: systemair_import_log.json
kayan_systemair/doctype/systemair_price_config/: test_systemair_price_config.py
kayan_systemair/doctype/systemair_quotation_item/: systemair_quotation_item.json  systemair_quotation_item.py  test_systemair_quotation_item.py
kayan_systemair/doctype/systemair_weight_table/: systemair_weight_table.json  systemair_weight_table.py  test_systemair_weight_table.py
kayan_systemair/fixtures/: custom_field.json  item_group.json  price_list.json  property_setter.json  role.json  systemair_price_config.json  systemair_weight_table.json  workflow.json  workflow_action.json  workflow_state.json
kayan_systemair/kayan_systemair/patches/: v1_client_uat_round1.py
kayan_systemair/page/price_list_import/: price_list_import.html  price_list_import.js
kayan_systemair/print_format/systemair_quotation/: systemair_quotation.html  systemair_quotation.json
kayan_systemair/public/css/: kayan_systemair.css
(+44 files in other folders)
