[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "kayan_systemair"
authors = [
    { name = "Nest Software Development", email = "info@nsd-eg.com" }
]
description = "SystemAir axial fan quotation and pricing application for Kayan for Import"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
version = "1.0.0"
dependencies = [
    "frappe",
    "openpyxl>=3.1.0",
]

[project.urls]
Homepage = "https://nsd-eg.com"

[tool.flit.module]
name = "kayan_systemair"
